# threadweaver

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  KF5ThreadWeaverConfig.cmake.in  KF6ThreadWeaverConfig.cmake.in  README.md  metainfo.yaml
autotests/: AppendCharacterAndVerifyJob.cpp  AppendCharacterAndVerifyJob.h  AppendCharacterJob.h  CMakeLists.txt  DeleteTest.cpp  DeleteTest.h  JobLoggingDecorator.cpp  JobLoggingDecorator.h  JobLoggingWeaver.cpp  JobLoggingWeaver.h  JobTests.cpp  JobTests.h  LifecycleTests.cpp  QueueFactoryTests.cpp  QueueTests.cpp  QueueTests.h  SequencesTests.cpp  SequencesTests.h  ShutdownOnQApplicationQuitTests.cpp  WaitForIdleAndFinished.cpp  WaitForIdleAndFinished.h  run-n-tests.py
benchmarks/: CMakeLists.txt  QueueBenchmarks.cpp
docs/: porting.qdoc  use-cases.qdoc  whymultithreading.md  whymultithreading.qdoc
examples/: CMakeLists.txt  HelloInternet.in.md  HelloWorldRaw.in.md  ThumbNailer.md
examples/HelloInternet/: CMakeLists.txt  HelloInternetResources.qrc  MainWidget.cpp  MainWidget.h  ViewController.cpp  ViewController.h  main.cpp
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/HelloWorldRaw/: CMakeLists.txt  HelloWorldRaw.cpp
examples/ThumbNailer/: AverageLoadManager.cpp  AverageLoadManager.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  ComputeThumbNailJob.cpp  ComputeThumbNailJob.h  FileLoaderJob.cpp  FileLoaderJob.h  Image.cpp  Image.h  ImageListFilter.cpp  ImageListFilter.h  ImageLoaderJob.cpp  ImageLoaderJob.h  ItemDelegate.cpp  ItemDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  PriorityDecorator.cpp  PriorityDecorator.h  Progress.h  ThumbNailer.cpp
src/: CMakeLists.txt  Collection.cpp  Collection.h  Dependency.cpp  Dependency.h  DependencyPolicy.cpp  DestructedState.cpp  DestructedState.h  Exception.cpp  Exception.h  ExecuteWrapper.cpp  ExecuteWrapper.h  Executor.cpp  Executor.h  IdDecorator.cpp  IdDecorator.h  InConstructionState.cpp  InConstructionState.h  Job.h  JobInterface.h  JobPointer.h  Lambda.h  ManagedJobPointer.h  QObjectDecorator.cpp  QObjectDecorator.h  Queue.cpp  Queue.h  QueueAPI.cpp  QueueAPI.h  QueueInterface.h  QueuePolicy.h  QueueSignals.cpp  QueueStream.cpp  QueueStream.h  Queueing.h  Sequence.h  ShuttingDownState.h  State.cpp  State.h  Weaver.h  (+85 more)
src/Weaver/: CMakeLists.txt  Collection.h  Dependency.cpp  Dependency.h  DependencyPolicy.h  DestructedState.cpp  DestructedState.h  Exception.cpp  ExecuteWrapper.cpp  ExecuteWrapper.h  Executor.cpp  IdDecorator.cpp  IdDecorator.h  InConstructionState.cpp  InConstructionState.h  Job.cpp  Job.h  JobCollection.cpp  JobCollection.h  JobSequence.cpp  JobSequence.h  Lambda.h  QObjectDecorator.cpp  QObjectDecorator.h  Queue.cpp  Queue.h  QueueAPI.cpp  QueueAPI.h  QueueInterface.h  QueueSignals.cpp  QueueSignals.h  QueueStream.cpp  QueueStream.h  Queueing.h  ResourceRestrictionPolicy.cpp  ResourceRestrictionPolicy.h  Sequence.cpp  Sequence.h  ShuttingDownState.cpp  ShuttingDownState.h  (+21 more)
src/WeaverGui/: WeaverThreadGrid.cpp  WeaverThreadGrid.h
